# learn-lang

./: .gitignore  README.md  plan.txt
cplusplus/docs/: initial-setup.txt
cplusplus/lessons/: 01-hello-world  01-hello-world.cpp
cucumber/: README.md
cucumber/docs/: initial-setup.txt
cucumber/lessons/: 01-hello-world-steps.js  01-hello-world.feature  README.md  package-lock.json  package.json
groovy/: 01-HelloWorld.groovy  02-VariablesDataTypesOperators.groovy  03-ControlStructures.groovy  04-CollectionsClosures.groovy  05-MethodsClassesScripts.groovy  README.md
groovy/api-tests/: build.gradle
groovy/docs/: initial-setup.txt
groovy/lessons/: 01-hello-world.groovy  README.md
java/docs/: initial-setup.txt
java/lessons/: 01-hello-world.java  HelloWorld.java  README.md
javascript/: input-output.js
javascript/docs/: initial-setup.txt
javascript/lessons/: 01-hello-world.html  01-hello-world.js  README.md
python/docs/: initial-setup.txt
python/lessons/: 01-hello-world.py  README.md
rust/2018-july-rust-s3lifecycle-project/: Cargo.toml  architecture.md  explain.txt  usage.txt
rust/calculator/: EXAMPLES.md  PROJECT_SUMMARY.md  README.md
rust/docs/: initial-setup.txt
rust/lessons/: README.md
rust/s3Lifecycle-Archival-CLI-tool/: Cargo.toml  aws-credentials.txt  explain.txt  prompt.txt  s3-tool.rs  usage.txt
spock/docs/: initial-setup.txt
spock/lessons/: README.md  build.gradle
typescript/docs/: initial-setup.txt
typescript/lessons/: 01-hello-world.js  01-hello-world.ts  README.md  package-lock.json  package.json
(+7 files in other folders)
