[package]
name = "s3-lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1"
aws-sdk-s3 = "1.13"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"